button and alignment fixed

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -6,6 +6,20 @@ body, html {
 
 }
 
+table
+{
+    width: 500px;
+    text-align: center;
+
+    border-collapse: collapse;
+
+}
+
+a{
+    color: cyan;
+}
+
+
 .head{
     width: 100%;
     text-align: center;
@@ -53,6 +67,37 @@ body, html {
 }
 
 .login_headline {
-    color: white;
     font-size: 80px;
+}
+
+.baloo_bhai {
+    color: white;
+    font-family: 'Baloo Bhai 2', sans-serif;
+    font-weight: bolder;
+}
+
+
+.btn {
+
+    background-color: #009900;
+    border: none;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+    font-family: 'Baloo Bhai 2', sans-serif;
+    font-weight: bolder;
+    margin: 4px 2px;
+
+    width: 170px;
+    height: 30px;
+    
+    background-color: #009900;
+    border-radius: 12px;
+
+    border: none;
+    line-height: 33.33%;
+
 }
